# CHANGELOG
# ---
# * Actually pass the amount of the capture through to Payflow [cody]
#
# * Update ExactGateway test and test mode [cody]
#
# * Remove unused method in PslCardGateway [cody]
#
# * Add updated credit card tests [cody]
#
# * Update and test PslCardGateway [cody]
#
# * Add Laser card type [cody]
#
# * Update Nochex documentation [cody]
#
# * Sanitize the Realex order_id [cody] 
#
# * Add support for Irish Realex payment gateway [John Ward, cody]
#
# * Move credit_card helper method to the test_helper [cody]
#
# * Update PayflowExpressResponse to match the interface of the PayflowExpressResponse.  Add :no_shipping and :address_override options to PayflowExpress [cody]
#
# * Add a currency option to the Payflow and Paypal gateways [cody]
#
# * PaypalExpress should use the shipping address, not the billing address [cody]
#
# * Allow overriding the user with Payflow so that a vendor and user can be provided when making requests [cody]
#
# * PayPal DirectPayment API requires a UK County to be sent as the state or province.  Return N/A as the state when one isn't provided to ensure that PayPal doesn't reject the payment [cody]
#
# * Add ability to perform reference transactions with Payflow [Al Evans, cody]
#
# * Enhance recurring Payflow tests and recurring_inquiry [Al Evans]
#
# * Add recurring payments to Payflow [Rick Olson]
#
# * Improve the error message generated by requires! [cody]
#
# * Update credit card regular expressions and update Quickpay gateway with tests for new cards [cody]
#
# * Add support for token based payments to PaymentExpress [Nik Wakelin]
#
# * Refactor default_currency to the base gateway class [cody]
#
# * Clean unsupported characters from the Quickpay ordernum [cody]
#
# * Call the :sale and :authorization in QuickpayGateway [cody]
# 
# * Add Danish gateway Quickpay [cody]
#
# * Remove redundant hash brackets from generator template [cody]
#